objects/ServiceAccount__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>APIClientID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>APIClientID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APIClientSecret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>APIClientSecret</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstanceID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>InstanceID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ServiceName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Username</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ServiceAccount</label>
</CustomObject>